--- a/board/am42x_core/project_example/project_keil5/example_am42x_core.uvprojx
+++ b/board/am42x_core/project_example/project_keil5/example_am42x_core.uvprojx
@@ -373,7 +373,7 @@
               <MiscControls></MiscControls>
               <Define>AM_VDEBUG AM_CORTEX_M0</Define>
               <Undefine></Undefine>
-              <IncludePath>..\..\..\..\3rdparty/CMSIS/Include;..\..\..\..\arch/arm/include;..\..\..\..\components/drivers/include;..\..\..\..\components/libc/armlib_adapter/include;..\..\..\..\components/libc/microlib_adapter/include;..\..\..\..\components/service/include;..\..\..\..\components/util/include;..\user_code;..\user_config;..\user_config/am_hwconf_usrcfg;..\user_config/am_servconf_usrcfg;..\..\..\..\board/bsp_common/include;..\..\..\..\examples/components;..\..\..\..\examples/soc/zlg;..\..\..\..\examples/std;..\..\..\..\examples\board\am42x_core;..\..\..\..\interface;..\..\..\..\soc\zlg\zsl42x;..\..\..\..\soc\zlg\drivers\include\adc;..\..\..\..\soc\zlg\drivers\include\adtim;..\..\..\..\soc\zlg\drivers\include\aes;..\..\..\..\soc\zlg\drivers\include\clk;..\..\..\..\soc\zlg\drivers\include\clktrim;..\..\..\..\soc\zlg\drivers\include\crc;..\..\..\..\soc\zlg\drivers\include\dac;..\..\..\..\soc\zlg\drivers\include\dma;..\..\..\..\soc\zlg\drivers\include\flash;..\..\..\..\soc\zlg\drivers\include\gpio;..\..\..\..\soc\zlg\drivers\include\i2c;..\..\..\..\soc\zlg\drivers\include\lcd;..\..\..\..\soc\zlg\drivers\include\lpmode;..\..\..\..\soc\zlg\drivers\include\lptim;..\..\..\..\soc\zlg\drivers\include\lpuart;..\..\..\..\soc\zlg\drivers\include\lvd;..\..\..\..\soc\zlg\drivers\include\opa;..\..\..\..\soc\zlg\drivers\include\pca;..\..\..\..\soc\zlg\drivers\include\pcnt;..\..\..\..\soc\zlg\drivers\include\ram;..\..\..\..\soc\zlg\drivers\include\rcc;..\..\..\..\soc\zlg\drivers\include\rtc;..\..\..\..\soc\zlg\drivers\include\spi;..\..\..\..\soc\zlg\drivers\include\tim;..\..\..\..\soc\zlg\drivers\include\trng;..\..\..\..\soc\zlg\drivers\include\uart;..\..\..\..\soc\zlg\drivers\include\vc;..\..\..\..\soc\zlg\drivers\include\wdt;..\..\..\..\components\modbus\include;..\..\..\..\soc\zlg\drivers\include\lora;..\..\..\..\soc\zlg\drivers\include\lpsoftimer</IncludePath>
+              <IncludePath>..\..\..\..\3rdparty/CMSIS/Include;..\..\..\..\arch/arm/include;..\..\..\..\components/drivers/include;..\..\..\..\components/libc/armlib_adapter/include;..\..\..\..\components/libc/microlib_adapter/include;..\..\..\..\components/service/include;..\..\..\..\components/util/include;..\user_code;..\user_config;..\user_config/am_hwconf_usrcfg;..\user_config/am_servconf_usrcfg;..\..\..\..\board/bsp_common/include;..\..\..\..\examples/components;..\..\..\..\examples/soc/zlg;..\..\..\..\examples/std;..\..\..\..\examples\board\am42x_core;..\..\..\..\interface;..\..\..\..\soc\zlg\zsl42x;..\..\..\..\soc\zlg\drivers\include\adc;..\..\..\..\soc\zlg\drivers\include\adtim;..\..\..\..\soc\zlg\drivers\include\aes;..\..\..\..\soc\zlg\drivers\include\clk;..\..\..\..\soc\zlg\drivers\include\clktrim;..\..\..\..\soc\zlg\drivers\include\crc;..\..\..\..\soc\zlg\drivers\include\dac;..\..\..\..\soc\zlg\drivers\include\dma;..\..\..\..\soc\zlg\drivers\include\flash;..\..\..\..\soc\zlg\drivers\include\gpio;..\..\..\..\soc\zlg\drivers\include\i2c;..\..\..\..\soc\zlg\drivers\include\lcd;..\..\..\..\soc\zlg\drivers\include\lpmode;..\..\..\..\soc\zlg\drivers\include\lptim;..\..\..\..\soc\zlg\drivers\include\lpuart;..\..\..\..\soc\zlg\drivers\include\lvd;..\..\..\..\soc\zlg\drivers\include\opa;..\..\..\..\soc\zlg\drivers\include\pca;..\..\..\..\soc\zlg\drivers\include\pcnt;..\..\..\..\soc\zlg\drivers\include\ram;..\..\..\..\soc\zlg\drivers\include\rcc;..\..\..\..\soc\zlg\drivers\include\rtc;..\..\..\..\soc\zlg\drivers\include\spi;..\..\..\..\soc\zlg\drivers\include\tim;..\..\..\..\soc\zlg\drivers\include\trng;..\..\..\..\soc\zlg\drivers\include\uart;..\..\..\..\soc\zlg\drivers\include\vc;..\..\..\..\soc\zlg\drivers\include\wdt;..\..\..\..\components\modbus\include;..\..\..\..\soc\zlg\drivers\include\lora</IncludePath>
             </VariousControls>
           </Cads>
           <Aads>
@@ -1095,31 +1095,6 @@
               <FileName>am_zsl42x_wdt.c</FileName>
               <FileType>1</FileType>
               <FilePath>..\..\..\..\soc\zlg\drivers\source\wdt\am_zsl42x_wdt.c</FilePath>
-            </File>
-            <File>
-              <FileName>am_zsl42x_lora.c</FileName>
-              <FileType>1</FileType>
-              <FilePath>..\..\..\..\soc\zlg\drivers\source\lora\am_zsl42x_lora.c</FilePath>
-            </File>
-            <File>
-              <FileName>am_zsl42x_lora_if_spi.c</FileName>
-              <FileType>1</FileType>
-              <FilePath>..\..\..\..\soc\zlg\drivers\source\lora\am_zsl42x_lora_if_spi.c</FilePath>
-            </File>
-            <File>
-              <FileName>am_zsl42x_lora_reg.c</FileName>
-              <FileType>1</FileType>
-              <FilePath>..\..\..\..\soc\zlg\drivers\source\lora\am_zsl42x_lora_reg.c</FilePath>
-            </File>
-            <File>
-              <FileName>am_zsl42x_lpsoftimer.c</FileName>
-              <FileType>1</FileType>
-              <FilePath>..\..\..\..\soc\zlg\drivers\source\lpsoftimer\am_zsl42x_lpsoftimer.c</FilePath>
-            </File>
-            <File>
-              <FileName>am_zsl42x_lpsoftimer_if.c</FileName>
-              <FileType>1</FileType>
-              <FilePath>..\..\..\..\soc\zlg\drivers\source\lpsoftimer\am_zsl42x_lpsoftimer_if.c</FilePath>
             </File>
           </Files>
         </Group>
@@ -2607,14 +2582,14 @@
               <FilePath>..\user_config\am_hwconf_usrcfg\am_hwconf_fmse_spi.c</FilePath>
             </File>
             <File>
-              <FileName>am_hwconf_zsl42x_lora_spi0.c</FileName>
-              <FileType>1</FileType>
-              <FilePath>..\user_config\am_hwconf_usrcfg\am_hwconf_zsl42x_lora_spi0.c</FilePath>
-            </File>
-            <File>
               <FileName>am_hwconf_zsl42x_lpsoftimer.c</FileName>
               <FileType>1</FileType>
               <FilePath>..\user_config\am_hwconf_usrcfg\am_hwconf_zsl42x_lpsoftimer.c</FilePath>
+            </File>
+            <File>
+              <FileName>am_hwconf_zsl42x_lora.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\user_config\am_hwconf_usrcfg\am_hwconf_zsl42x_lora.c</FilePath>
             </File>
           </Files>
         </Group>
@@ -2625,6 +2600,26 @@
               <FileName>modbus.lib</FileName>
               <FileType>4</FileType>
               <FilePath>..\..\..\..\components\modbus\modbus.lib</FilePath>
+            </File>
+          </Files>
+        </Group>
+        <Group>
+          <GroupName>lora</GroupName>
+          <Files>
+            <File>
+              <FileName>am_zsl42x_lora_if_spi.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\..\..\..\soc\zlg\drivers\source\lora\adapter\am_zsl42x_lora_if_spi.c</FilePath>
+            </File>
+            <File>
+              <FileName>am_zsl42x_lpsoftimer_if.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\..\..\..\soc\zlg\drivers\source\lora\adapter\am_zsl42x_lpsoftimer_if.c</FilePath>
+            </File>
+            <File>
+              <FileName>lora.lib</FileName>
+              <FileType>4</FileType>
+              <FilePath>..\..\..\..\soc\zlg\drivers\source\lora\armcc\lora.lib</FilePath>
             </File>
           </Files>
         </Group>
@@ -3720,31 +3715,6 @@
               <FileType>1</FileType>
               <FilePath>..\..\..\..\soc\zlg\drivers\source\wdt\am_zsl42x_wdt.c</FilePath>
             </File>
-            <File>
-              <FileName>am_zsl42x_lora.c</FileName>
-              <FileType>1</FileType>
-              <FilePath>..\..\..\..\soc\zlg\drivers\source\lora\am_zsl42x_lora.c</FilePath>
-            </File>
-            <File>
-              <FileName>am_zsl42x_lora_if_spi.c</FileName>
-              <FileType>1</FileType>
-              <FilePath>..\..\..\..\soc\zlg\drivers\source\lora\am_zsl42x_lora_if_spi.c</FilePath>
-            </File>
-            <File>
-              <FileName>am_zsl42x_lora_reg.c</FileName>
-              <FileType>1</FileType>
-              <FilePath>..\..\..\..\soc\zlg\drivers\source\lora\am_zsl42x_lora_reg.c</FilePath>
-            </File>
-            <File>
-              <FileName>am_zsl42x_lpsoftimer.c</FileName>
-              <FileType>1</FileType>
-              <FilePath>..\..\..\..\soc\zlg\drivers\source\lpsoftimer\am_zsl42x_lpsoftimer.c</FilePath>
-            </File>
-            <File>
-              <FileName>am_zsl42x_lpsoftimer_if.c</FileName>
-              <FileType>1</FileType>
-              <FilePath>..\..\..\..\soc\zlg\drivers\source\lpsoftimer\am_zsl42x_lpsoftimer_if.c</FilePath>
-            </File>
           </Files>
         </Group>
         <Group>
@@ -5231,14 +5201,14 @@
               <FilePath>..\user_config\am_hwconf_usrcfg\am_hwconf_fmse_spi.c</FilePath>
             </File>
             <File>
-              <FileName>am_hwconf_zsl42x_lora_spi0.c</FileName>
-              <FileType>1</FileType>
-              <FilePath>..\user_config\am_hwconf_usrcfg\am_hwconf_zsl42x_lora_spi0.c</FilePath>
-            </File>
-            <File>
               <FileName>am_hwconf_zsl42x_lpsoftimer.c</FileName>
               <FileType>1</FileType>
               <FilePath>..\user_config\am_hwconf_usrcfg\am_hwconf_zsl42x_lpsoftimer.c</FilePath>
+            </File>
+            <File>
+              <FileName>am_hwconf_zsl42x_lora.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\user_config\am_hwconf_usrcfg\am_hwconf_zsl42x_lora.c</FilePath>
             </File>
           </Files>
         </Group>
@@ -5249,6 +5219,26 @@
               <FileName>modbus.lib</FileName>
               <FileType>4</FileType>
               <FilePath>..\..\..\..\components\modbus\modbus.lib</FilePath>
+            </File>
+          </Files>
+        </Group>
+        <Group>
+          <GroupName>lora</GroupName>
+          <Files>
+            <File>
+              <FileName>am_zsl42x_lora_if_spi.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\..\..\..\soc\zlg\drivers\source\lora\adapter\am_zsl42x_lora_if_spi.c</FilePath>
+            </File>
+            <File>
+              <FileName>am_zsl42x_lpsoftimer_if.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\..\..\..\soc\zlg\drivers\source\lora\adapter\am_zsl42x_lpsoftimer_if.c</FilePath>
+            </File>
+            <File>
+              <FileName>lora.lib</FileName>
+              <FileType>4</FileType>
+              <FilePath>..\..\..\..\soc\zlg\drivers\source\lora\armcc\lora.lib</FilePath>
             </File>
           </Files>
         </Group>
