--- a/board/am42x_core/project_demo_bootloader/project_application/project_keil5/demo_am42x_core_application.uvprojx
+++ b/board/am42x_core/project_demo_bootloader/project_application/project_keil5/demo_am42x_core_application.uvprojx
@@ -1617,6 +1617,11 @@
               <FilePath>..\..\..\..\..\examples\board\am42x_core\lora\demo_zsl42x_core_lora_rx_timeout.c</FilePath>
             </File>
             <File>
+              <FileName>demo_zsl42x_core_lora_uart.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\..\..\..\..\examples\board\am42x_core\lora\demo_zsl42x_core_lora_uart.c</FilePath>
+            </File>
+            <File>
               <FileName>demo_zsl42x_core_lora_tx.c</FileName>
               <FileType>1</FileType>
               <FilePath>..\..\..\..\..\examples\board\am42x_core\lora\demo_zsl42x_core_lora_tx.c</FilePath>
@@ -4134,6 +4139,11 @@
               <FileName>demo_zsl42x_core_lora_rx_timeout.c</FileName>
               <FileType>1</FileType>
               <FilePath>..\..\..\..\..\examples\board\am42x_core\lora\demo_zsl42x_core_lora_rx_timeout.c</FilePath>
+            </File>
+            <File>
+              <FileName>demo_zsl42x_core_lora_uart.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\..\..\..\..\examples\board\am42x_core\lora\demo_zsl42x_core_lora_uart.c</FilePath>
             </File>
             <File>
               <FileName>demo_zsl42x_core_lora_tx.c</FileName>
