--- a/board/am42x_core/project_template/project_eclipse/.project
+++ b/board/am42x_core/project_template/project_eclipse/.project
@@ -74,7 +74,7 @@
 	<variableList>
 		<variable>
 			<name>copy_PARENT</name>
-			<value>file:/E:/AMetal/gitlab/ametal</value>
+			<value>$%7BPARENT-4-PROJECT_LOC%7D</value>
 		</variable>
 		<variable>
 			<name>copy_PARENT1</name>
